@startuml facade

class PaymentFacade {
  - pixPayment: PixPayment
  - payPalPayment: PayPalPayment
  - pagSeguroPayment: PagSeguroPayment
  + PaymentFacade()
  + pay(double, String)
}

class PixPayment {
  + process(double)
}

class PayPalPayment {
  + executePayment(double)
}

class PagSeguroPayment {
  + makePayment(double)
}

PaymentFacade --> PixPayment
PaymentFacade --> PayPalPayment
PaymentFacade --> PagSeguroPayment

@enduml
